--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-# pyproject.toml
-
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
@@ -20,6 +18,8 @@ classifiers = [
 ]
 # Define the packages your project directly depends on.
 dependencies = [
+    "fastapi",
+    "uvicorn",
     "requests",
     "typer",
     "rich"
