Day 18: Integrate SQLAlchemy and connect to PostgreSQL

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "uvicorn",
     "requests",
     "typer",
-    "rich"
+    "rich",
+    "sqlalchemy",
+    "psycopg2-binary"
 ]
 
 [project.urls]
