Day 23: Implement token-based authentication with OAuth2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,10 @@ dependencies = [
     "typer",
     "rich",
     "sqlalchemy",
-    "psycopg2-binary"
+    "psycopg2-binary",
+    "python-jose[cryptography]",
+    "passlib[bcrypt]",
+    "python-multipart"
 ]
 
 [project.optional-dependencies]
