--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,22 +41,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[test]"
-      # --- ADD THIS NEW DEBUGGING STEP ---
-      - name: Debug Environment Variables
-        run: |
-          echo "--- Printing all environment variables ---"
-          env
-          echo "--- Specifically checking DB_HOST ---"
-          echo "The DB_HOST is set to: $DB_HOST"
-          echo "-------------------------------------"
-      # ------------------------------------
 
       # Step 4: Run the tests. This is the most critical step.
       - name: Run tests with pytest
         # Provide environment variables that the tests need to connect to the postgres service.
         # The service is available on 'localhost' with the port mapped automatically by Actions.
         env:
-          DB_HOST: localhost
+          DB_HOST: postgres
           POSTGRES_USER: briefing_user
           POSTGRES_PASSWORD: a_secure_password
           POSTGRES_DB: briefing_db_test
