Fix CI database connectivity by using localhost
- ci.yaml: expose Postgres port and set DB_HOST=localhost for tests
- conftest.py: simplify DB_HOST fallback to localhost, add debug print
- ensures tests run reliably both locally and in GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,25 +2,25 @@ name: Run Python Tests
 
 on:
   push:
-    branches:
-      [ "main" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:15-alpine
-        # Provide the same env vars as in your docker-compose.yml
+        ports:
+          - 5432:5432
         env:
           POSTGRES_USER: briefing_user
           POSTGRES_PASSWORD: a_secure_password
-          POSTGRES_DB: briefing_db_test # Use a different DB name for tests
-        # Healthcheck to ensure the DB is ready before tests run
+          POSTGRES_DB: briefing_db_test
         options: >-
-          --health-cmd pg_isready
+          --health-cmd "pg_isready -U briefing_user -d briefing_db_test"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -30,26 +30,25 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      # Step 2: Set up a specific version of Python.
+      # Step 2: Set up Python 3.11
       - name: Set up Python 3.11
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Step 3: Install project dependencies.
+      # Step 3: Install project dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[test]"
 
-      # Step 4: Run the tests. This is the most critical step.
+      # Step 4: Run tests with pytest
       - name: Run tests with pytest
-        # Provide environment variables that the tests need to connect to the postgres service.
-        # The service is available on 'localhost' with the port mapped automatically by Actions.
         env:
-          DB_HOST: postgres
-          POSTGRES_USER: briefing_user
-          POSTGRES_PASSWORD: a_secure_password
-          POSTGRES_DB: briefing_db_test
-          WEATHER_API_KEY: "dummy_key_for_ci" # Provide a dummy key for any tests that might need it.
+          DB_HOST: localhost
+          DB_PORT: 5432
+          DB_USER: briefing_user
+          DB_PASSWORD: a_secure_password
+          DB_NAME: briefing_db_test
+          WEATHER_API_KEY: "dummy_key_for_ci"
         run: pytest
