fix(ci): Run full application stack for integration tests
The previous CI workflow failed because it only started a database service but not the FastAPI application server. This caused  as the integration tests had no API to connect to.

This commit refactors the workflow to use Attaching to briefing-container, briefing-db
[Kbriefing-container exited with code 0
[Kbriefing-db exited with code 0 to build and run the entire application stack. A new step was added to wait for the API to become healthy before the tests are executed, ensuring a stable testing environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,45 +10,31 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:15-alpine
-        ports:
-          - 5432:5432
-        env:
-          POSTGRES_USER: briefing_user
-          POSTGRES_PASSWORD: a_secure_password
-          POSTGRES_DB: briefing_db_test
-        options: >-
-          --health-cmd "pg_isready -U briefing_user -d briefing_db_test"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
-      # Step 1: Check out the repository's code onto the runner.
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python 3.11
-      - name: Set up Python 3.11
+      - name: Build and run the application
+        run: docker compose up --build -d
+
+      - name: Wait for API to be healthy
+        run: |
+          # Wait for up to 30 seconds for the API to respond
+          timeout 30s bash -c 'until curl -s http://localhost:8000/docs > /dev/null; do echo "Waiting for API server..."; sleep 2; done'
+
+      - name: Set up Python for test runner
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      # Step 3: Install project dependencies
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[test]"
+      - name: Install test dependencies
+        run: pip install -e ".[test]"
 
-      # Step 4: Run tests with pytest
-      - name: Run tests with pytest
-        env:
-          DB_HOST: localhost
-          DB_PORT: 5432
-          DB_USER: briefing_user
-          DB_PASSWORD: a_secure_password
-          DB_NAME: briefing_db_test
-          WEATHER_API_KEY: "dummy_key_for_ci"
+      - name: Run tests
+        # The tests run on the host runner, connecting to the services
+        # exposed by Docker Compose on localhost.
         run: pytest
+
+      - name: Show container logs on failure
+        if: failure()
+        run: docker compose logs
