fix(docker): Add healthcheck to solve startup race condition
The API container was attempting to connect to the database before the
PostgreSQL service was fully initialized, causing a connection refused
error and a CI pipeline failure.

This commit resolves the race condition by:
1. Adding a  to the  service that uses
   to verify when the database is ready to accept connections.
2. Modifying the  service's  condition to wait until
   the  service is  before starting.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,8 @@ services:
     # this 'api' service starts. This prevents the API from trying to
     # connect to a database that isn't ready yet.
     depends_on:
-      - db
+      db:
+        condition: service_healthy
   # The PostgreSQL database service
   db:
     # ... configuration for our PostgreSQL database container ...
@@ -42,6 +43,11 @@ services:
     # to it directly with a database tool.
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U briefing_user -d briefing_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 # 'volumes' at the top level declares the named volume to be managed by Docker.
 volumes:
