--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,12 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - name: Build and run the application
+      - name: Build and run the application for testing
+        # We pass an environment variable to the 'docker compose' command.
+        # This will override the POSTGRES_DB value in docker-compose.yml
+        # for this specific run, causing it to create the test database.
+        env:
+          POSTGRES_DB: briefing_db_test
         run: docker compose up --build -d
 
       - name: Wait for API to be healthy
@@ -33,6 +38,8 @@ jobs:
       - name: Run tests
         # The tests run on the host runner, connecting to the services
         # exposed by Docker Compose on localhost.
+        # The tests in conftest.py are hardcoded to connect to the
+        # 'briefing_db_test' database, which was just created.
         run: pytest
 
       - name: Show container logs on failure
