--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,9 @@ jobs:
           # Wait for up to 30 seconds for the API to respond
           timeout 30s bash -c 'until curl -s http://localhost:8000/docs > /dev/null; do echo "Waiting for API server..."; sleep 2; done'
 
+      - name: Check tables in DB
+        run: docker compose exec db psql -U briefing_user -d briefing_db_test -c "\dt"
+
       - name: Set up Python for test runner
         uses: actions/setup-python@v5
         with:
@@ -53,4 +56,4 @@ jobs:
 
       - name: Show container logs on failure
         if: failure()
-        run: docker compose logs
+        run: docker compose logs --timestamps api
