fix(ci): provide a dummy WEATHER_API_KEY for GitHub Actions
The integration tests require the WEATHER_API_KEY environment variable,
otherwise the API raises a 500 error when trying to call the OpenWeatherMap
service. This commit sets a dummy key in the CI environment to allow tests
to run without hitting the real external API.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
           POSTGRES_PASSWORD: a_secure_password
           POSTGRES_DB: briefing_db_test   # override for CI
           DB_HOST: db
+          WEATHER_API_KEY: "dummy_key_for_ci"
         run: docker compose up --build -d
 
       - name: Wait for API to be healthy
