--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "psycopg2-binary",
     "python-jose[cryptography]",
     "passlib[bcrypt]",
-    "python-multipart"
+    "python-multipart",
 ]
 
 [project.optional-dependencies]
